--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <label><input type="checkbox" id="show-labels-checkbox" checked>Show labels</label>
 
 <div id="canvas"></div>
+<a href="#" id="download-link">Download</a>
 
 <script src="sentence-diagrammer.js"></script>
 <script>
