--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div id="canvas"></div>
 <a href="#" id="download-link" download="diagram.svg">Download</a>
 
-<script src="sentence-diagrammer.js"></script>
+<script src="grammatical-diagrammer.js"></script>
 <script>
 	document.getElementById("show-labels-checkbox").addEventListener('click', event => {
 		var labels = document.getElementsByClassName("label");
