Render multiple descenders
Problem: Parent sentence doesn't adjust to the increased size of the word.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <script src="svg.js"></script>
+<body>
 
 <label><input type="checkbox" id="show-labels-checkbox" checked>Show labels</label>
 
@@ -21,3 +22,5 @@
 		}
 	})
 </script>
+
+</body>
