--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <script src="svg.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+<style>
+	body {
+		font-family: 'Lora', serif;
+	}
+</style>
 <body>
+
+<p>Hover over a word with your mouse to see what part of speech it is.</p>
 
 <div id="canvas"></div>
 <a href="#" id="download-link" download="diagram.svg">Download</a>
