Generate SVGs using NodeJS and show them in the browser

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </style>
 <body>
 
-<p>Hover over a word with your mouse to see what part of speech it is.</p>
+<!-- titles are broken for now -->
+<p style="display: none">Hover over a word with your mouse to see what part of speech it is.</p>
 
-<div id="canvas"></div>
-<a href="#" id="download-link" download="diagram.svg">Download</a>
+<object type="image/svg+xml" data="diagram.svg">Failed to load SVG</object>
 
-<script src="sentence-diagrammer.js"></script>
+<p><a href="diagram.svg" id="download-link" download="diagram.svg">Download</a></p>
 
 </body>
