Hide "Hover over a word with your mouse" - labels currently outdated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style>
 <body>
 
-<p>Hover over a word with your mouse to see what part of speech it is.</p>
+<!-- <p>Hover over a word with your mouse to see what part of speech it is.</p> -->
 
 <object type="image/svg+xml" data="diagram.svg">Failed to load SVG</object>
 
